# swagger/swagger.yml
@@ -323,6 +323,29 @@ definitions:
         type: string
       password:
         type: string
+  models.UserFiled:
+    title: UserFiled
+    type: object
+    properties:
+      email:
+        description: 邮箱账号
+        type: string
+      gender:
+        description: 性别
+        type: integer
+        format: int64
+      name:
+        description: 姓名
+        type: string
+      nickname:
+        description: 昵称
+        type: string
+      password:
+        description: 密码
+        type: string
+      phone:
+        description: 手机号码
+        type: string
   models.UserRelated:
     title: UserRelated
     type: object
